migdb.qvto/transforms/tests/validator_app/test_err_invalid_09_required.qvto
import builder_errors;

modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";
transformation test_err_invalid_08_required(out outModel : ERR);


main() {
	var errorMessage : String := "Structure contains TPC hierarchy causing table expansion class "+
		"\"Person\" property\"ownedThings\"";
	var error : Error := _validationError(errorMessage, "validator_app.qvto"); 
	_errorLog(OrderedSet{error});	 
}